--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Faceval</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -14,7 +14,8 @@
     <string name="login_failed">"Login failed"</string>
 
     <!-- Splash -->
-    <string name="loading">Loading...</string>
+    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
+
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -29,4 +30,16 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Main fragment -->
+    <string name="get_started">Take a new photo</string>
+
+    <string name="eval_image">Eval image</string>
+    <string name="score">Score: </string>
+
+    <string name="title_text">This is a demo title</string>
+    <string name="demo_score">8.6</string>
+    <string name="demo_date">2021-4-22</string>
 </resources>
