--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="capture_image_description">Captured image</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="notLoggedInYet">You are not logged in yet 🤷</string>
 </resources>
