--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="notLoggedInYet">You are not logged in yet 🤷</string>
+    <string name="username">User ID</string>
+    <string name="register">Register</string>
 </resources>
