--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="confirm_password">Confirm password</string>
 
     <string name="register_failed">Register failed</string>
+    <string name="logout">Logout</string>
 </resources>
