--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,11 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_password">Password must be 5 to 20 characters without spaces</string>
+    <string name="invalid_email">Not a valid email address</string>
+    <string name="invalid_display">Not a valid nickname</string>
+    <string name="conflict_username">This user ID has already been registered</string>
+    <string name="invalid_confirm_password">The two passwords are not same</string>
     <string name="login_failed">"Login failed"</string>
 
     <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
