--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Faceval</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_history">History</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_take_photo">Faceval Camera</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -85,4 +86,14 @@
     <string name="scoring_prompt">Scoring...</string>
 
     <string name="logout_confirm_title">Do you really want to logout?</string>
+    <string name="take_picture_prompt">Take a picture</string>
+    <string name="pick_from_gallery_prompt">Pick one from gallery</string>
+    <string name="please_wait">Please wait...</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="image_source_select">Select where to get an image</string>
+    <string name="capture">Capture</string>
+
+    <string name="camera_switch_to_front">Back</string>
+    <string name="camera_switch_to_back">Front</string>
 </resources>
