Update camera support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_history">History</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_take_photo">Faceval Camera</string>
+    <string name="title_scoring">Faceval AI Portal</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -104,4 +105,7 @@
     <string name="current_len_facing">%s camera is currently used</string>
     <string name="camera_front">Front</string>
     <string name="camera_back">Back</string>
+
+    <string name="select_photo">Select a picture</string>
+    <string name="image_load_failed">Failed to load the image</string>
 </resources>
